--- a/src/config/.env
+++ b/src/config/.env
@@ -1,5 +1,5 @@
 DB_HOST="localhost"
-DB_USER="root"
-DB_PASSWORD="123456"
-DATABASE="sad1"
+DB_USER="block2"
+DB_PASSWORD="Qwerty1234!"
+DATABASE="db_sad2"
 DIALECT="mysql"
